refactor: 서비스 테스트 fake 객체로 변경